--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,37 +1,46 @@
 workflows:
   maui_ios_unsigned:
-    name: Твои покупки
+    name: Твои покупки — unsigned IPA
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
       vars:
-        DOTNET_VERSION: 9.0.100
-        DOTNET_CLI_HOME: /tmp/dotnet
-        DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      xcode: 15.4
+        DOTNET_VERSION: "9.0.304"
     scripts:
-      - name: Install .NET SDK
+      - name: Install .NET SDK (user-local)
         script: |
-          brew install --cask dotnet-sdk
-          sudo ln -s /usr/local/share/dotnet/dotnet /usr/local/bin/dotnet
-          dotnet --version
-      - name: Install MAUI workloads (no sudo)
+          curl -L https://dot.net/v1/dotnet-install.sh -o dotnet-install.sh
+          chmod +x dotnet-install.sh
+          ./dotnet-install.sh --version $DOTNET_VERSION --install-dir "$HOME/.dotnet"
+          export PATH="$HOME/.dotnet:$PATH"
+          export DOTNET_ROOT="$HOME/.dotnet"
+          dotnet --info
+          
+      - name: Install MAUI workload (iOS only)
         script: |
-          mkdir -p $DOTNET_CLI_HOME
-          dotnet workload install maui --skip-manifest-update
-          dotnet workload install ios maccatalyst --skip-manifest-update
-      - name: Restore NuGet packages
+          export PATH="$HOME/.dotnet:$PATH"
+          export DOTNET_ROOT="$HOME/.dotnet"
+          dotnet workload install maui-ios --sdk-version $DOTNET_VERSION
+          dotnet workload restore
+          dotnet workload list
+
+      - name: Restore NuGet packages (iOS)
         script: |
-          dotnet restore
-      - name: Build iOS project (unsigned)
+          export PATH="$HOME/.dotnet:$PATH"
+          export DOTNET_ROOT="$HOME/.dotnet"
+          dotnet restore MauiApp1.csproj -p:TargetFramework=net9.0-ios
+
+      - name: Build unsigned IPA (iOS)
         script: |
+          export PATH="$HOME/.dotnet:$PATH"
+          export DOTNET_ROOT="$HOME/.dotnet"
           dotnet publish MauiApp1.csproj \
             -f net9.0-ios \
             -c Release \
-            -p:RuntimeIdentifier=ios-arm64 \
-            -p:ArchiveOnBuild=true \
             -p:BuildIpa=true \
-            -p:Codesign=false
+            -p:EnableCodeSigning=false \
+            -p:ArchiveOnBuild=true \
+            -p:RuntimeIdentifier=ios-arm64
+
     artifacts:
-      - "**/*.ipa"
-      - "**/*.app"
+      - bin/Release/net9.0-ios/ios-arm64/*.ipa
