--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   maui_ios_unsigned:
-    name: Твои покупки — unsigned IPA
+    name: Твои покупки
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
