--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -21,7 +21,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>Список покупок</ApplicationTitle>
+		<ApplicationTitle>Твои покупки</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.mauiapp1</ApplicationId> 
