--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   maui_ios_unsigned:
-    name: Твои покупки
+    name: Build unsigned .NET MAUI IPA for AltStore
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
@@ -41,6 +41,6 @@ workflows:
             -p:EnableCodeSigning=false \
             -p:ArchiveOnBuild=true \
             -p:RuntimeIdentifier=ios-arm64
-artifacts:
-  - bin/Release/net9.0-ios/ios-arm64/publish/*.ipa
 
+    artifacts:
+      - bin/Release/net9.0-ios/ios-arm64/*.ipa
